<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCardDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16x"
        android:text="@string/enter_card_details"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCardDetailsSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16x"
        android:text="@string/card_details_activity_subtitle"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvCardDetailsTitle" />

    <com.braintreepayments.cardform.view.CardForm
        android:id="@+id/cardForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8x"
        android:layout_marginTop="@dimen/space_16x"
        android:layout_marginEnd="@dimen/space_8x"
        android:layout_marginBottom="@dimen/space_16x"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCardDetailsSubTitle" />

    <com.task.ui.base.custom.MoveUpLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16x"
            android:text="@string/continueText"
            android:theme="@style/BlackBtnStyle" />
    </com.task.ui.base.custom.MoveUpLayout>

</androidx.constraintlayout.widget.ConstraintLayout>